Added ToS and Privacy Policy, changed icons

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -150,8 +150,8 @@
             If you have any questions about this Privacy Policy or how your data is handled, please contact us at:
         </p>
         <p>
-            <strong>Email:</strong> [YOUR_EMAIL_HERE]<br>
-            <strong>Developer:</strong> [YOUR_NAME_OR_COMPANY_HERE]
+            <strong>Email:</strong> aleksandar.zedi@gmail.com<br>
+            <strong>Developer:</strong> Aleksandar Zedi
         </p>
     </div>
 
